# context-attribute

./: Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
examples/: counter.rs  custom_msg.rs  read_string.rs  square.rs
src/: lib.rs
tests/: test.rs
